--- a/client/src/pages/Products/Products.css
+++ b/client/src/pages/Products/Products.css
@@ -1,28 +1,12 @@
-.pagination-container {
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
-  }
-  
-  .page-item {
-    margin: 0 5px;
-  }
-  
-  .page-link {
-    padding: 8px 12px;
-    border: 1px solid #ccc;
-    cursor: pointer;
-  }
-  
-  .active .page-link {
-    background-color: #007bff;
-    color: white;
-  }
-  
-  .previous-item, .next-item {
-    padding: 8px 12px;
-    cursor: pointer;
-  }
-  .active {
-    background-color: #777;
-  }
+.pagination-container  {
+  display: flex;
+  justify-content: center;
+}
+
+.page-item.active .page-link {
+  z-index: 3;
+  color: #fff;
+  background-color: #2a2a2a;
+  border-color: #2a2a2a;
+}
+
