--- a/prototype/src/pages/Products/Products.css
+++ b/prototype/src/pages/Products/Products.css
@@ -1,28 +1,53 @@
-.pagination-container {
-    display: flex;
-    justify-content: center;
-    margin-top: 20px;
-  }
-  
-  .page-item {
-    margin: 0 5px;
-  }
-  
-  .page-link {
-    padding: 8px 12px;
-    border: 1px solid #ccc;
-    cursor: pointer;
-  }
-  
-  .active .page-link {
-    background-color: #007bff;
-    color: white;
-  }
-  
-  .previous-item, .next-item {
-    padding: 8px 12px;
-    cursor: pointer;
-  }
-  .active {
-    background-color: #777;
-  }
+:root {
+  --primary-color: #2a2a2a;
+  --secondary-color: #1e1e1e;
+  --accent-color: #f39c12;
+  --accent-hover-color: #e8584f;
+  --background-color: #ffffff;
+  --text-color: #333333;
+  --light-text-color: #aaaaaa;
+  --border-color: #eeeeee;
+  --border-radius: 12px;
+  --box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+  --transition-speed: 0.3s;
+}
+:root {
+  --primary-color: #2a2a2a;
+  --secondary-color: #1e1e1e;
+  --text-color: #ffffff;
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+  padding: 0;
+  margin-top: 20px;
+}
+
+.page-item {
+  margin: 0 5px;
+}
+
+.page-link {
+  display: inline-block;
+  padding: 10px 15px;
+  background-color: var(--background-color);
+  color: var(--text-color);
+  border: 1px solid var(--secondary-color);
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.page-link:hover {
+  background-color: var(--secondary-color);
+  color: var(--background-color);
+  /* border: 1px solid var(--background-color); */
+}
+
+.page-item.active .page-link {
+  background-color: var(--secondary-color);
+  font-weight: bold;
+}
